...
  "adminMinimum": "Minimum",
  "adminModifyPermissions": "Modify permissions",
  "adminName": "Name",
  "adminNoGroup": "No group",
  "adminNoManager": "No manager selected",
  "adminNoMember": "No member",
  "adminNoMembership": "No membership",
  "adminNoMoreLoaner": "No lender available",
  "adminNoSchool": "No school",
  "adminNotificationSent": "Notification sent",
  "adminNotifyGroup": "Send a notification",
  "adminPaiement": "Payment",
  "adminPaiementModule": "Payment module",
...
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
  "amapDeleteDelivery": "Delete delivery?",
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
...
  "bookingManagement": "Management",
  "bookingManager": "Manager",
  "bookingManagerName": "Manager name",
  "bookingMultipleDay": "Multiple days",
  "bookingMyBookings": "My bookings",
  "bookingNecessaryKey": "Key needed",
  "bookingNext": "Next",
  "bookingNo": "No",
  "bookingNoAppointmentInReccurence": "No slot exists with these recurrence settings",
  "bookingNoCurrentBooking": "No current booking",
  "bookingNoDateError": "Please choose a date",
  "bookingNoDaySelected": "No day selected",
  "bookingNoDescriptionError": "Please enter a description",
...
  "paiementAddingSellerError": "Error while adding seller",
  "paiementAddingStoreError": "Error while adding the store",
  "paiementAddSeller": "Add seller",
  "paiementAddStore": "Add store",
  "paiementAddThisDevice": "Add this device",
  "paiementAdmin": "Administrator",
  "paiementAmount": "Amount",
  "paiementAskDeviceActivation": "Device activation request",
  "paiementAStore": "a store",
  "paiementAt": "at",
  "paiementAuthenticationRequired": "Authentication required to pay",
  "paiementAuthentificationFailed": "Authentication failed",
  "paiementBalanceAfterTopUp": "Balance after top-up:",
...
      "quantity": {
        "type": "int"
      }
    }
  },
  "paiementLastTransactions": "Latest transactions",
  "paiementLimitedTo": "Limited to",
  "paiementLinkedAssociation": "Linked association",
  "paiementManagement": "Management",
  "paiementManageEvents": "Manage ticket events",
  "paiementManageSellers": "Manage sellers",
  "paiementMarkPaid": "Mark as paid",
  "paiementMarkReceived": "Mark as received",
...
  "paiementRevokeDeviceDescription": "You will no longer be able to use this device for payments",
  "paiementRightsOf": "Rights of",
  "paiementRightsUpdated": "Rights updated",
  "paiementRightsUpdateError": "Error while updating rights",
  "paiementScan": "Scan",
  "paiementScanAlreadyUsedQRCode": "QR Code already used",
  "paiementScanCode": "Scan a code",
  "paiementScanNoMembership": "No membership",
  "paiementScanNoMembershipConfirmation": "This product is not available to non-members. Confirm the payment?",
  "paiementSeeHistory": "View history",
  "paiementSelectAssociation": "Select an association",
  "paiementSelected": "Selected",
  "paiementSelectStructure": "Select a structure",
  "paiementSellerError": "You are not a seller of this store",
  "paiementSellerRigths": "Seller rights",
  "paiementSellersOf": "Sellers of",
  "paiementSettings": "Settings",
  "paiementSpent": "Spent",
  "paiementStats": "Stats",
  "paiementStoreBalance": "Store balance",
  "paiementStoreDeleted": "Store deleted",
  "paiementStoreName": "Store name",
  "paiementStores": "Stores",
  "paiementStructureAdmin": "Structure administrator",
  "paiementStructureManagement": "{structure} management",
  "@paiementStructureManagement": {
...
